WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195570
Layout Test imported/w3c/web-platform-tests/IndexedDB/transaction-abort-request-error.html is failing
https://bugs.webkit.org/show_bug.cgi?id=195570
Summary
Layout Test imported/w3c/web-platform-tests/IndexedDB/transaction-abort-reque...
Sihui Liu
Reported
2019-03-11 13:36:23 PDT
Request result should be undefined if it's never set.
Attachments
Patch
(4.50 KB, patch)
2019-03-11 13:39 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2019-03-11 13:39:14 PDT
Created
attachment 364282
[details]
Patch
Alex Christensen
Comment 2
2019-03-11 15:47:26 PDT
Comment on
attachment 364282
[details]
Patch Could we instead have this in the header? Then we could remove all of these. Result m_result { NullResultType::Undefined };
Sihui Liu
Comment 3
2019-03-11 18:30:20 PDT
(In reply to Alex Christensen from
comment #2
)
> Comment on
attachment 364282
[details]
> Patch > > Could we instead have this in the header? Then we could remove all of these. > > Result m_result { NullResultType::Undefined };
Tried this and it caused problem to forward declarations in IDBRequest.h, so I guess this doesn't work..
Brady Eidson
Comment 4
2019-03-12 11:33:56 PDT
Comment on
attachment 364282
[details]
Patch Hah.
WebKit Commit Bot
Comment 5
2019-03-12 12:28:46 PDT
Comment on
attachment 364282
[details]
Patch Clearing flags on attachment: 364282 Committed
r242815
: <
https://trac.webkit.org/changeset/242815
>
WebKit Commit Bot
Comment 6
2019-03-12 12:28:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-03-12 12:29:21 PDT
<
rdar://problem/48818543
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug