Layout Test imported/w3c/web-platform-tests/IndexedDB/transaction-abort-request-error.html is failing https://bugs.webkit.org/show_bug.cgi?id=195570

Reviewed by Brady Eidson.

LayoutTests/imported/w3c:

Updated test expectation to PASS.

* web-platform-tests/IndexedDB/transaction-abort-request-error-expected.txt:

Source/WebCore:

IDBRequest result should be undefined if it is never set.

* Modules/indexeddb/IDBRequest.cpp:
(WebCore::IDBRequest::IDBRequest):


Canonical link: https://commits.webkit.org/209943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242815 268f45cc-cd09-0410-ab3c-d52691b4dbfc